<resources>
    <string name="app_name">kholodyadya</string>
    <string name="your_products">Сканируйте!</string>
    <string name="scan_new">Сканировать</string>
    <string name="fridge_bar_button">Fridge Bar Button</string>
    <string name="scan_bar_button">Scan Bar Button</string>
    <string name="profile_bar_button">Profile Bar Button</string>
    <string name="fridgeTitle">Твои продукты</string>
    <string name="scanPageTitle">Сканирование чека</string>
    <string name="product_image">Изображение продукта</string>
    <string name="due_date">Испортится через</string>
    <string name="product_weight_desc">Количество продуктов в шт или кг</string>
    <string name="product_weight">Количество</string>
    <string name="test_token">eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJkZW1rYTEiLCJpYXQiOjE2ODgwMDk3NTYsImV4cCI6MTY4ODAyNzc1Nn0.9ci4KY-pCsXsUHZ1AdRMHfIXJGWgJEKvFHwLRKqa_n8</string>
    <string name="server_url">http://51.250.21.160:8080</string>
    <string name="category_beverage">beverage</string>
    <string name="deleteButton">Удалить</string>
    <string name="calories100g">Калорий в 100г</string>
    <string name="protein100g">Белков в 100г</string>
    <string name="carbon100g">Углеводов в 100г</string>
    <string name="fat100g">Жиров в 100г</string>
</resources>