<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QRActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/scanButton"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">


        <TextView
            android:id="@+id/qrData"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

        <ImageView
            android:id="@+id/qrImage"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <Button
        android:id="@+id/scanButton"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:background="@color/accent"
        android:text="@string/scan_new"
        app:layout_constraintBottom_toTopOf="@+id/bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/dummy_bg"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/scanPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/scanPageTitle"
            android:textColor="@color/accent"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bar"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/dummy_bg"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/fridgeBarButtonSelected"
            android:layout_width="70dp"
            android:layout_height="56dp"
            android:layout_marginStart="35dp"
            android:onClick="openMainPage"
            android:background="@android:color/transparent"
            android:contentDescription="@string/fridge_bar_button"
            android:src="@drawable/ic_fridge_bar_button_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/scanBarButton"
            android:layout_width="70dp"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/scan_bar_button"
            android:onClick="openQRPage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profileBarButton"
            app:layout_constraintStart_toEndOf="@+id/fridgeBarButtonSelected"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_scan_bar_button" />

        <ImageButton
            android:id="@+id/profileBarButton"
            android:layout_width="70dp"
            android:layout_height="56dp"
            android:layout_marginEnd="35dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile_bar_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile_bar_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>